--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<script src="{{url_for('static', filename='main.js')}}"></script>
+{{url_for('static', filename='main.js')}}
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
